# arc-studio

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.4/: Makefile  cmake_install.cmake
glfw-3.4/src/: Makefile  cmake_install.cmake
shaders/: ui.frag  ui.vert
src/: main.cpp
src/core/: Application.cpp  Application.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  Shader.cpp  Shader.h
src/ui/: Area.cpp  Area.h  Button.cpp  Button.h  FontAtlas.cpp  FontAtlas.h  Slider.cpp  Slider.h  Split.cpp  Split.h  TextInput.cpp  TextInput.h  Theme.cpp  Theme.h  UIManager.cpp  UIManager.h  Widget.cpp  Widget.h
src/utils/: FileHelper.h
